--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,12 +1,13 @@
 body {
     background-color: #0e0e0e;
+    margin: 0px 0px 0px 0px;
 }
 
 #starCanvas {
     position: absolute;
     top: 0px;
     left: 0px;
-    height: 100%;
+    height: 200vh;
     display: block;
     width: 100%;
     background-color: #0e0e0e;
@@ -14,6 +15,7 @@ body {
 }
 
 #starContainer{
+    height:200vh;
     position: relative;
     justify-content: center;
     display: block;
@@ -32,6 +34,7 @@ body {
     font-size: 80px;
     user-select: none;
     text-align: center;
+    margin-top: 0px;
     margin-bottom: 0px;
 }
 
@@ -50,7 +53,9 @@ body {
 }
 
 #landingContent{
-    margin-top:calc((100vh - 220px)/2);
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 p {
