--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 #landing {
-    width: 835px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     height:100vh;
@@ -58,8 +58,111 @@ body {
     transform: translateY(-50%);
 }
 
+#experiences {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 150px 150px 150px 150px;
+    align-items: center;
+    justify-items: center;
+    width: 1250px;
+    margin-left: calc((100% - 1250px)/2);
+    text-align: center;
+    color:white;
+}
+
+#experiences h1{
+    font-family: 'Libre Baskerville', serif;
+    color:white;
+    font-size: 45px;
+    user-select: none;
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    grid-column-start: 1;
+    grid-column-end:3;
+}
+
+#experiences h2{
+    font-size: 35px;
+    font-family: 'Libre Baskerville', serif;
+    margin-bottom: 15px;
+    margin-top: 0px;
+}
+
+#experiences h4{
+    margin-top: 0px;
+    margin-bottom:0px;
+    font-size: 20px;
+    font-family: 'Karla', sans-serif;
+    font-weight: 100;
+
+}
+
+#experienceImg{
+    height:100%;
+    grid-row-start: 2;
+    grid-row-end:5;
+    grid-column-start: 2;
+    grid-column-end:3;
+}
+
+#experienceImg img{
+    height: 90%;
+    border-radius: 10%;
+}
+
+#intuit{
+    grid-row-start: 2;
+    transition: transform .3s ease-out;
+}
+
+#intuit:hover{
+    transform: translate(0, -5px);   
+}
+
+#google{
+    grid-row-start: 3;
+    transition: transform .3s ease-out;
+}
+
+#google:hover{
+    transform: translate(0, -5px);
+}
+
+#cipher {
+    grid-row-start: 4;
+    transition: transform .3s ease-out;
+}
+
+#cipher:hover{
+    transform: translate(0, -5px);
+}
+
+#projects {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto auto auto auto auto;
+    width: 80%;
+    margin-left:10%;
+    margin-top:200px;
+
+}
+
+#projects h1{
+    font-family: 'Libre Baskerville', serif;
+    color:white;
+    font-size: 45px;
+    user-select: none;
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    grid-column-start: 1;
+    grid-column-end:3;
+}
+
 p {
     color:white;
+    font-weight: 100;
     font-family: 'Karla', sans-serif;
     font-size: 25px;
     line-height: 34px;
@@ -69,26 +172,29 @@ p {
 #about-content {
     margin-left: auto;
     margin-right: auto;
-    width: 850px;
+    width: 100%;
     display: grid;
-    grid-template-columns: 40% 60%;
-    grid-column-gap: 50px;
+    grid-template-columns: 25% 25% 50%;
 }
 
 #about-content img{
     grid-column-start: 1;
     width: 100%;
     align-self: center;
-    border: white 8px solid;
 }
 
 #about-content #text {
     grid-column-start: 2;
+    width:90%;
+    margin-left: 5%;
+    align-self:center;
 }
+
+
 
 #about-content h1 {
     color:white;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Libre Baskerville', serif;
     font-size: 50px;
     user-select: none;
 }
