--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -187,7 +187,16 @@ p {
     grid-column-start: 2;
     width:90%;
     margin-left: 5%;
-    align-self:center;
+}
+
+#text h1{
+    margin-top:10px;
+}
+
+
+#text p {
+    font-size: 18px;
+    line-height: 25px;
 }
 
 
@@ -195,8 +204,81 @@ p {
 #about-content h1 {
     color:white;
     font-family: 'Libre Baskerville', serif;
-    font-size: 50px;
+    font-size: 40px;
     user-select: none;
+}
+
+#contactContainer {
+    background-color: #ffa502;;
+}
+
+#contactContent{
+    width: 90%;
+    margin-left: 5%;
+    display:grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto auto auto auto;
+}
+
+#contactContent h1{
+    font-size:40px;
+    margin-top:10px;
+    margin-bottom:10px;
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+
+#contactContent p{
+    align-self:center;
+    margin-top: 5px;
+    margin-bottom:5px;
+}
+
+#contactContent a{
+    text-decoration: none;
+}
+
+#contactBlurb {
+    margin-top:0px;
+    margin-bottom:15px !important;
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+#contactContent i{
+    justify-self: center;
+    align-self: center;
+    color:white
+}
+
+#igIcon{
+    grid-row-start: 3;
+}
+
+#githubIcon{
+    grid-row-start: 5;
+    grid-column-start: 1;
+}
+
+#twitterIcon{
+    grid-row-start: 4;
+    grid-column-start: 1;
+}
+
+#igHandle {
+    grid-column-start: 2;
+    grid-row-start: 3;
+}
+
+#twitterHandle {
+    grid-column-start: 2;
+    grid-row-start: 4;
+}
+
+#githubHandle {
+    grid-column-start: 2;
+    grid-row-start: 5;
 }
 
 #imgTrigger{
