--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: #0e0e0e;
     margin: 0px 0px 0px 0px;
+    cursor:crosshair;
 }
 
 #starCanvas {
@@ -50,6 +51,11 @@ body {
     border: 1px solid;
     border-radius: 44px;
     margin-left:calc((100% - 200px)/2);
+    transition: 0.25s;
+}
+
+#landing button:hover{
+    background-color: orange;
 }
 
 #landingContent{
