--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -46,6 +46,7 @@ body {
 #landing a {
     text-align: center;
     font-family: 'Karla', sans-serif;
+    font-size: 14px;
     display: inline-block;
     background-color: #0b0b0b;
     width: 200px;
