Fetch and render json object with rapper quotes

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -310,12 +310,9 @@ p {
   margin-top: 20px;
 }
 
-#messageContainer{
+#messages{
     margin-left: auto;
     margin-right: auto;
     width: 850px;
-}
-
-#greeting{
-    color: white;
+    color:white;
 }
