--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -8,15 +8,14 @@ body {
     position: absolute;
     top: 0px;
     left: 0px;
-    height: 200vh;
     display: block;
+    height:100%;
     width: 100%;
     background-color: #0e0e0e;
     z-index: -1;
 }
 
 #starContainer{
-    height:200vh;
     position: relative;
     justify-content: center;
     display: block;
@@ -311,8 +310,28 @@ p {
 }
 
 #messages{
+    padding-bottom: 15vh;
+    padding-top: 15vh;
     margin-left: auto;
     margin-right: auto;
     width: 850px;
     color:white;
+}
+
+form input {
+    font-weight: 100;
+    font-family: 'Karla', sans-serif;
+    font-size: 25px;
+    border: none;
+    color: white;
+    background-color: #080808;
+    border-radius: 2em;
+    width: 400px;
+    height: 50px;
+    box-shadow: 0 4px 6px -5px hsl(0, 0%, 40%), inset 0px 4px 6px -5px black;
+    padding-left: 27px;
+}
+
+form textarea:focus, form input:focus{
+    outline:none;
 }
